--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,16 @@
 * {
   margin: 0;
 }
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
