--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -37,6 +37,13 @@
   transform: scale(1.08);
 }
 
-.card{ position: relative;
+.card {
+  position: relative;
+}
 
+.favorite-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 999;
 }
