--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -10,23 +10,41 @@
   
     /* Animations */
     transition-timing-function: ease-in;
-    transition: all 0.5s;
+    transition: all 0.2s;
   }
   
   .nav-logo {
-    position: fixed;
-    left: 20px;
-    width: 80px;
+    height: 15px;
     object-fit: contain;
   }
   
   .nav-avatar {
-    position: fixed;
-    right: 20px;
-    width: 30px;
+    width: 40px;
     object-fit: contain;
+    border-radius: 4px;
+    border: 1px solid black;
+
+  }
+  .nav-avatar:hover {
+    box-shadow: 0 0 4px 1px rgba(249, 253, 255, 0.5);
+
   }
   
   .nav-container-black {
     background-color: #111;
+  }
+
+
+  .logout-button {
+      margin-right: 25px;
+      border: 3px solid black;
+
+      
+  }
+  
+
+  .logout-button:hover {
+    border: 3px groove white;
+    color: red;
+    background: #fff;
   }
