--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,3 +1,19 @@
 
 
 
+.login-form-wrapper{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 32px;
+    color: #fff;
+}
+
+.login-form{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
